modal FIX Z-index

--- a/src/sass/components/_about-backdrop.scss
+++ b/src/sass/components/_about-backdrop.scss
@@ -8,6 +8,7 @@
   background: rgba(66, 35, 52, 0.473);
 
   opacity: 1;
+  z-index: 10;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &.is-hidden {
@@ -30,7 +31,6 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  z-index: 5;
   width: 100%;
   height: 100%;
   padding: 15px;
